syntax = 'proto3';

package app;

service AppController {
    rpc SetHello (SomeString) returns (HelloString);
    rpc GetHello (Empty) returns (HelloString);
}

message SomeString {
     string data = 1;
}

message HelloString {
    string helloResponse = 1;
}

message Empty {

}